# alphax_ai_platform

./: INSTALL_NOTES.md  README.md  pyproject.toml  setup.py
alphax_ai_platform/: hooks.py  modules.txt  patches.txt
alphax_ai_platform/alphax_ai/: __init__.py
alphax_ai_platform/alphax_ai/agents/: engine.py
alphax_ai_platform/alphax_ai/api/: blueprints.py  chat.py  ingest.py
alphax_ai_platform/alphax_ai/context/: builder.py
alphax_ai_platform/alphax_ai/doctype/ai_action_request/: ai_action_request.json  ai_action_request.py
alphax_ai_platform/alphax_ai/doctype/ai_agent/: ai_agent.json  ai_agent.py
alphax_ai_platform/alphax_ai/doctype/ai_audit_log/: ai_audit_log.json  ai_audit_log.py
alphax_ai_platform/alphax_ai/doctype/ai_chat_message/: ai_chat_message.json  ai_chat_message.py
alphax_ai_platform/alphax_ai/fixtures/: ai_intake_blueprint.json  ai_mapping_template.json
alphax_ai_platform/alphax_ai/ingestion/: extractors.py
alphax_ai_platform/alphax_ai/logs/: audit.py
alphax_ai_platform/alphax_ai/mapping/: engine.py
alphax_ai_platform/alphax_ai/parsing/: parsers.py
alphax_ai_platform/alphax_ai/policies/: engine.py  redaction.py
alphax_ai_platform/alphax_ai/prompts/: renderer.py
alphax_ai_platform/alphax_ai/providers/: base.py  mock_provider.py  openai_provider.py  registry.py
alphax_ai_platform/alphax_ai/realtime/: stream.py
alphax_ai_platform/config/: desktop.py
alphax_ai_platform/fixtures/: ai_intake_blueprint.json
alphax_ai_platform/public/css/: ai_assistant.css  blueprint_wizard.css
alphax_ai_platform/public/js/: ai_assistant.js
(+27 files in other folders)
